--- a/css/main.css
+++ b/css/main.css
@@ -7849,6 +7849,10 @@ h2 {
   font-style: normal;
   font-weight: normal;
   letter-spacing: 1.11px; }
+  @media (max-width: 767.98px) {
+    h2 {
+      font-size: 30px;
+      line-height: 35px; } }
 
 h3 {
   font-size: 36px;
@@ -7857,6 +7861,10 @@ h3 {
   font-style: normal;
   font-weight: normal;
   letter-spacing: 1.05px; }
+  @media (max-width: 767.98px) {
+    h3 {
+      font-size: 28px;
+      line-height: 32px; } }
 
 h5 {
   font-size: 22px;
@@ -7865,6 +7873,10 @@ h5 {
   font-style: normal;
   font-weight: normal;
   letter-spacing: 0.64px; }
+  @media (max-width: 767.98px) {
+    h5 {
+      font-size: 18px;
+      line-height: 22px; } }
 
 h6 {
   font-size: 18px;
@@ -7874,6 +7886,10 @@ h6 {
   font-weight: normal;
   letter-spacing: 0.53px;
   text-transform: uppercase; }
+  @media (max-width: 767.98px) {
+    h6 {
+      font-size: 16px;
+      line-height: 20px; } }
 
 .btn {
   font-weight: 500; }
@@ -7911,10 +7927,18 @@ h6 {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal; }
+  @media (max-width: 767.98px) {
+    .nav-link {
+      font-size: 18px;
+      line-height: 22px; } }
 
 .caption-content h2 {
   font-size: 35px;
   line-height: 35px; }
+@media (max-width: 767.98px) {
+  .caption-content {
+    font-size: 30px;
+    line-height: 35px; } }
 
 .about-section h6 {
   font-family: "akzidgrostd_regular", sans-serif; }
@@ -7927,15 +7951,23 @@ h6 {
   font-weight: normal;
   text-transform: uppercase; }
 
-.discover-section .grid-item h2 span.designation {
-  font-size: 34px;
-  line-height: 34px;
-  letter-spacing: 0; }
+.discover-section .grid-item h2 {
+  line-height: 30px; }
+  .discover-section .grid-item h2 span {
+    line-height: 34px; }
+    .discover-section .grid-item h2 span.designation {
+      font-size: 34px;
+      letter-spacing: 0; }
+.discover-section .grid-item a {
+  font-size: 22px;
+  line-height: 26px; }
 
 .testimonial-carousel .content {
   font-size: 18px;
   line-height: 23px; }
 
+.artist h5 {
+  font-family: "akzidgrostd_regular", sans-serif; }
 .artist p {
   font-size: 18px;
   line-height: 23px; }
@@ -7963,12 +7995,16 @@ img {
   max-width: 100%; }
 
 .navbar {
-  padding-top: 30px;
+  padding-top: 25px;
   padding-bottom: 25px; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .navbar {
-      padding-right: 60px;
-      padding-left: 60px; } }
+      padding-right: 45px;
+      padding-left: 45px; } }
+  @media (max-width: 991.98px) {
+    .navbar {
+      padding-right: 0;
+      padding-left: 0; } }
 
 .navbar-light .navbar-nav .nav-link {
   color: #414042; }
@@ -7983,6 +8019,19 @@ img {
       width: 70%; } }
   .navbar-nav .nav-link {
     padding: 0 !important; }
+
+@media (max-width: 991.98px) {
+  .navbar-brand {
+    width: 160px; } }
+
+@media (max-width: 767.98px) {
+  #navbarMobile {
+    clear: both;
+    width: 100%; }
+    #navbarMobile .navbar-nav {
+      padding-top: 30px; }
+      #navbarMobile .navbar-nav .nav-item {
+        margin: 10px 0; } }
 
 .slick-slider .slick-arrow:before {
   width: 38px;
@@ -8006,18 +8055,23 @@ img {
   margin-top: 15px; }
 
 .top-bar {
-  padding-top: 35px; }
-  @media (min-width: 768px) {
+  padding-top: 25px; }
+  .top-bar > span {
+    margin-top: 10px;
+    display: inline-block; }
+  @media (min-width: 992px) {
     .top-bar {
-      padding-right: 60px;
-      padding-left: 60px; } }
+      padding-right: 45px;
+      padding-left: 45px; } }
 
 .top-right-link-wrap a {
-  padding: 0 13px;
+  display: inline-block;
+  padding: 0px 15px;
+  margin-top: 10px;
   position: relative; }
   .top-right-link-wrap a:before {
     position: absolute;
-    left: -1px;
+    left: -3px;
     top: 50%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -8025,7 +8079,7 @@ img {
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
     content: "";
-    height: 14px;
+    height: 10px;
     width: 2px;
     background: #414042; }
   .top-right-link-wrap a:first-child:before {
@@ -8033,7 +8087,9 @@ img {
     visibility: hidden; }
 
 .search-form {
-  margin-left: 13px; }
+  margin-left: 13px;
+  margin-top: 10px;
+  display: inline-block; }
 
 .header-search-triger {
   padding-left: 16px !important;
@@ -8060,7 +8116,12 @@ img {
   .slider-wrap .container {
     min-height: 565px; }
   .slider-wrap .slider-caption-wrap {
-    bottom: 63px; }
+    bottom: 63px;
+    left: 36px; }
+    @media (max-width: 767.98px) {
+      .slider-wrap .slider-caption-wrap {
+        left: 15px;
+        right: 15px; } }
 
 .slider-caption-inner {
   border: 2px solid #ffffff;
@@ -8068,14 +8129,31 @@ img {
 
 .slider-caption {
   background-color: rgba(255, 255, 255, 0.76);
-  padding: 33px 50px; }
+  padding: 30px 40px; }
   .slider-caption h3 {
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    line-height: 37px;
+    margin-bottom: 0; }
+  .slider-caption h5 {
+    line-height: 22px;
+    margin-bottom: 0; }
+    @media (max-width: 767.98px) {
+      .slider-caption h5 {
+        margin-bottom: 10px; } }
   .slider-caption .play-video {
-    width: 70px;
-    height: 70px;
+    width: 73px;
+    height: 73px;
     border-radius: 50%;
     margin-right: 40px; }
+    @media (max-width: 767.98px) {
+      .slider-caption .play-video {
+        display: block;
+        margin: 0 auto;
+        clear: both; } }
+  @media (max-width: 767.98px) {
+    .slider-caption .caption-content {
+      width: 100%;
+      margin-top: 30px; } }
 
 .hero-slider-cotroller {
   left: 0;
@@ -8120,13 +8198,14 @@ img {
 
 @media (min-width: 992px) {
   .lead-container {
-    max-width: 1015px; } }
+    max-width: 1040px; } }
 
 .lead-text-wrap {
-  padding-top: 50px; }
+  padding-top: 40px; }
   .lead-text-wrap h3 {
     text-align: center;
-    margin-bottom: 15px; }
+    margin-bottom: 15px;
+    text-transform: uppercase; }
   .lead-text-wrap h6 {
     text-align: center;
     margin-bottom: 0; }
@@ -8134,7 +8213,7 @@ img {
     padding-bottom: 16px; }
 
 .main-footer-section {
-  margin-top: 55px;
+  margin-top: 88px;
   padding-bottom: 62px;
   border-top: 1px solid #979797; }
   .main-footer-section .footer-widget {
@@ -8153,20 +8232,25 @@ img {
     text-align: center;
     margin-top: 35px; }
   .about-section .logo-wrap {
-    margin-top: 39px;
+    margin-top: 25px;
     padding: 0 11px; }
     .about-section .logo-wrap .logo {
       text-align: center; }
 
 .why-buy-from-us {
-  margin-top: 55px;
-  padding: 40px 0 35px; }
-  .why-buy-from-us h2 {
-    text-align: center; }
+  margin-top: 35px;
+  padding: 35px 0; }
+  .why-buy-from-us h3 {
+    text-align: center;
+    text-transform: uppercase; }
+    @media (max-width: 767.98px) {
+      .why-buy-from-us h3 {
+        padding: 0 15px; } }
 
 /* Feature item section style */
 .feature-item {
-  margin-top: 29px; }
+  margin-top: 20px;
+  padding: 0; }
   .feature-item .carousel-figure {
     float: left;
     width: 73px;
@@ -8183,7 +8267,7 @@ img {
     float: left;
     width: -webkit-calc(100% - 103px);
     width: calc(100% - 103px);
-    padding-right: 29px; }
+    padding-right: 20px; }
     @media (max-width: 991.98px) {
       .feature-item .content {
         width: 100%;
@@ -8193,19 +8277,23 @@ img {
         width: -webkit-calc(100% - 103px);
         width: calc(100% - 103px);
         margin-top: 0px; } }
+    .feature-item .content p {
+      line-height: 19px; }
     .feature-item .content span {
       margin-bottom: 10px;
       display: block; }
 
 /* Discover section style */
 .discover-section {
-  padding-top: 10px;
-  padding-bottom: 77px; }
+  padding-top: 6px;
+  padding-bottom: 78px; }
   .discover-section .grid-item {
+    position: relative;
     float: left;
     margin-right: 0;
     width: 100%;
-    margin-top: 46px; }
+    margin-top: 50px;
+    text-align: center; }
     .discover-section .grid-item:nth-child(1n) {
       margin-right: 0; }
     .discover-section .grid-item:nth-child(2n) {
@@ -8246,23 +8334,29 @@ img {
     .discover-section .grid-item h2 {
       padding-top: 59px;
       padding-bottom: 58px;
-      margin-bottom: 24px;
+      margin-bottom: 68px;
       text-align: center;
       border: 2px solid #414042;
       border-left: 0;
       border-right: 0; }
       .discover-section .grid-item h2 span {
-        display: inline-block; }
+        display: block; }
     .discover-section .grid-item a {
       display: block;
       padding: 11px 10px 7px;
       text-align: center;
       background-color: #414042;
-      color: #fff; }
+      color: #fff;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%; }
 
 /* Meet art section style */
 .meet-art-section {
-  padding: 35px 0; }
+  padding: 0 0 35px; }
+  .meet-art-section .lead-text-wrap {
+    padding-top: 35px; }
 
 /* Testimonial section style */
 .testimonial-section {
@@ -8272,6 +8366,9 @@ img {
     margin-bottom: 30px; }
   .testimonial-section .testimonial-carousel {
     padding: 0 68px; }
+    @media (max-width: 767.98px) {
+      .testimonial-section .testimonial-carousel {
+        padding: 0 40px; } }
     .testimonial-section .testimonial-carousel .content {
       padding-left: 42px;
       padding-right: 25px;
@@ -8284,9 +8381,14 @@ img {
         width: 17px;
         height: 14px;
         background-image: url(../img/quote-left-icon.png); }
+      @media (max-width: 767.98px) {
+        .testimonial-section .testimonial-carousel .content {
+          padding-left: 25px;
+          padding-right: 0; } }
     .testimonial-section .testimonial-carousel cite {
       font-style: normal;
-      padding-top: 5px; }
+      padding-top: 15px;
+      display: block; }
 
 .artist-item-wrap {
   padding-top: 10px; }
