--- a/scss/3-moduler/_nav.scss
+++ b/scss/3-moduler/_nav.scss
@@ -1,9 +1,13 @@
 .navbar{
-    padding-top: 30px;
+    padding-top: 25px;
     padding-bottom: 25px;
-    @include media-breakpoint-up(md){
-        padding-right: 60px;
-        padding-left: 60px;
+    @include media-breakpoint-up(lg){
+        padding-right: 45px;
+        padding-left: 45px;
+    }
+    @include media-breakpoint-down(md){
+        padding-right: 0;
+        padding-left: 0;
     }
 }
 
@@ -25,5 +29,24 @@
     }
     .nav-link{
         padding: 0 !important;
+    }
+}
+
+.navbar-brand{
+    @include media-breakpoint-down(md){
+        width: 160px;
+    }
+}
+
+#navbarMobile{
+    @include media-breakpoint-down(sm){
+        clear: both;
+        width: 100%;
+        .navbar-nav{
+            padding-top: 30px;
+            .nav-item{
+                margin: 10px 0;
+            }
+        }
     }
 }
