--- a/scss/4-layouts/_hero.scss
+++ b/scss/4-layouts/_hero.scss
@@ -20,7 +20,11 @@ $heroHeight: 565px;
     }
     .slider-caption-wrap{
         bottom: 63px;
-        //left: 0;
+        left: 36px;
+        @include media-breakpoint-down(sm){
+            left: 15px;
+            right: 15px;
+        }
     }
 }
 
@@ -30,15 +34,35 @@ $heroHeight: 565px;
 }
 .slider-caption{
     background-color: rgba(255, 255, 255, 0.76);
-    padding: 33px 50px;
+    padding: 30px 40px;
     h3{
         text-transform: uppercase;
+        line-height: 37px; 
+        margin-bottom: 0;
+    }
+    h5{
+        line-height: 22px;
+        margin-bottom: 0;
+        @include media-breakpoint-down(sm){
+            margin-bottom: 10px;
+        }
     }
     .play-video{
-        width: 70px; 
-        height: 70px;
+        width: 73px; 
+        height: 73px;
         border-radius: 50%;
         margin-right: 40px;
+        @include media-breakpoint-down(sm){
+            display: block;
+            margin: 0 auto;
+            clear: both;
+        }
+    }
+    .caption-content{
+        @include media-breakpoint-down(sm){
+            width: 100%;
+            margin-top: 30px;
+        }
     }
 }
 
