--- a/scss/4-layouts/_lead-container.scss
+++ b/scss/4-layouts/_lead-container.scss
@@ -1,13 +1,14 @@
 .lead-container{    
     @include media-breakpoint-up(lg){
-        max-width: 1015px;
+        max-width: 1040px;
     }
 }
 .lead-text-wrap{
-    padding-top: 50px;
+    padding-top: 40px;
     h3{
         text-align: center;
         margin-bottom: 15px;
+        text-transform: uppercase;
     }
     h6{
         text-align: center;
